# ncnn-android-yolov6

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/ncnnyolov6/: MainActivity.java  NcnnYolov6.java
app/src/main/jni/: CMakeLists.txt  yolo.cpp  yoloncnn.cpp
app/src/main/res/values/: strings.xml
